# Benchmark-Generation-with-LLM-and-SMT

./: .gitignore  README.md  algorithm.txt  conftest.py  demo_construct_and_select.py  generate_benchmark_suite.py  make_results_table.py  requirements.txt
benchmarks/: OCL-Steered-FiveKnob_summary.json
benchmarks/CarRental/: constraints.json  constraints.ocl  constraints_sat.json  constraints_sat.ocl  constraints_unsat.json  constraints_unsat.ocl  manifest.jsonl  profile.json  report.json
benchmarks/Social Media/: constraints.json  constraints.ocl  constraints_sat.json  constraints_sat.ocl  constraints_unsat.json  constraints_unsat.ocl  manifest.jsonl  report.json
cache/semantic/: BankSystem_8448660913f3.json  (+20 more)
config/: business_logic_profile.py  semantic_rules.py
examples/: example_suite.yaml  example_suite_steered.yaml
hybrid-ssr-ocl-full-extended/: pyproject.toml  requirements.txt
hybrid-ssr-ocl-full-extended/src/hybrid_ssr_ocl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hybrid-ssr-ocl-full-extended/src/ssr_ocl/: framework_integration.py
hybrid-ssr-ocl-full-extended/src/ssr_ocl/lowering/: association_backed_encoder.py  unified_smt_encoder.py
hybrid-ssr-ocl-full-extended/src/ssr_ocl/super_encoder/: enhanced_smt_encoder.py  generic_global_consistency_checker.py  ocl_normalizer.py
hybrid-ssr-ocl-full-extended/tests/: test_enhanced_patterns.py
models/: car_rental.xmi
templates/: patterns_revised.json
tests/: test_constraint_similarity_optional_numpy.py  test_llm_semantic_analyzer_postprocess.py  test_semantic_live.py  test_verifier_fallback.py
(+143 files in other folders)
