[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-ssr-ocl"
version = "0.1.0"
description = "Hybrid SSR + SMT (Z3) OCL Verification Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "z3-solver>=4.13,<4.14",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
